Update homepage, change font

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -8,17 +8,43 @@
 </head>
 <body>
     <header>
-        <div class="navbar"></nav>
-        <img id="navbar_img" src="../Assets/AimClab logo.PNG">
-        <div id="navbar_name">AimClab</div>
-        <a href="./home.html">Home</a></li>
-        <a href="./leaderboard.html">Leaderboard</a></li>
-        <a href="./store.html">Store</a></li>
-        <a href="./aboutus.html">About Us</a></li>
+        <div class="navbar">
+            <img id="navbar_img" src="../Assets/AimClab logo.PNG">
+            <div id="navbar_name">AimClab</div>
+            <a href="./home.html">Home</a>
+            <a href="./leaderboard.html">Leaderboard</a>
+            <a href="./store.html">Store</a>
+            <a href="./aboutus.html">About Us</a>
         </div>
     </header>
     <main>
-
+        <h1>Welcome</h1>
+        <section class="sectionexplore">
+            <h2>STRENGTHEN YOUR GAMING SKILLS</h2>
+            <h3>As gamers, we understand that there are numerous games available, each of which is unique. As a result, 
+                Aimclabs provides an extensive variety of resources to help you elevate your aim whatever of the FPS you play. 
+                This involves both official Aimclabs assignments and collections created by us and those created by our expanding community. 
+                Dive into specifically developed aim training exercises to master the art of flicking, tracking, speed, perception, and cognition 
+                while ranking up in your favorite game.</h3>
+            <h3>TELL ME MORE</h3>
+            <h2>SHOP OUR STORE</h2>
+            <h3>Complete your gaming gear to have interesting game experience.
+                Various design of branded clothing to wear that show you are a game fanatic!</h3>
+            <h3>EXPLORE AIMCLAB STORE</h3>
+            <h2>LEADERBOARD</h2>
+            <h3>See our players' training grand total scores in AimClab.
+                Spot your favorite player here or yourself. *wink*</h3>
+            <h3>SHOW LEADERBOARD</h3>
+            <h3>Are you interested to be the best player in your favorite game?
+                Sign up with us now</h3>
+            <h3>SIGN UP</h3>
+            <h2>Our Social Media</h2>
+            <h3>Instagram @AimClab</h3>
+            <h3>X @AimClab</h3>
+            <h3>Tiktok @AimClab</h3>
+        </div>
+        <div class="sectiondownload"></div>
+        <div class="sectionsocialmedia"></div>
     </main>
 </body>
 </html>
