Change logo, change font, updated home, about us, leaderboard, and store, added sign up page

--- a/Pages/aboutus.html
+++ b/Pages/aboutus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/aboutus.css">
     <title>Home Page</title>
 </head>
 <body>
@@ -11,14 +11,37 @@
         <div class="navbar"></nav>
         <img id="navbar_img" src="../Assets/AimClab logo.PNG">
         <div id="navbar_name">AimClab</div>
-        <a href="./home.html">Home</a></li>
-        <a href="./leaderboard.html">Leaderboard</a></li>
-        <a href="./store.html">Store</a></li>
-        <a href="./aboutus.html">About Us</a></li>
+        <a href="./leaderboard.html">Leaderboard</a>
+        <a href="./store.html">Store</a>
+        <a href="./aboutus.html">About Us</a>
+        <a href="./home.html">Home</a>
         </div>
     </header>
-    <main>
 
+    <div class="banner">
+        <div class="image-banner">
+            <img src="">
+        </div>
+    </div>
+
+    <main>
+        <div class="aboutus">
+        <div class="aboutus-header">About Us</title>
+            <div class="aboutus-content">
+                <p>We are aware there are a wide variety of games accessible, each with modest distinctions, considering we are passionate players as well. 
+                    Aimclabs tackles this variability by providing a full array of tools for optimizing your aiming abilities, regardless of the first-person shooter (FPS) you play.</p>
+
+                <p>Not only do we provide official Aimclabs challenges and curated sets developed in-house, but we also welcome contributions from our active community. 
+                    Immerse yourself in deliberately constructed aim training activities that will help you improve your flicking, tracking, speed, perception, and cognition. 
+                    Monitor your progress in Aimclabs as you rise through every obstacle of the game that you love.</p>
+    
+                <p> AimClab team is made up of experts in neuroscience, programmers, game designers, and computer vision pioneers who have in common an overwhelming enthusiasm for gaming.
+                    The Aimclabs trainer takes advantage of an integrated set of thinking processes and neurological assessments designed to help gamers as they improve their games performance.</p>
+
+                <p>It is your time to shine and show you can be the pro player with us!</p>
+            </div>
+        </div>
+        </div>
     </main>
 </body>
 </html>
