--- a/Pages/home.html
+++ b/Pages/home.html
@@ -3,48 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/home.css">
     <title>Home Page</title>
 </head>
 <body>
     <header>
         <div class="navbar">
-            <img id="navbar_img" src="../Assets/AimClab logo.PNG">
+            <img id="navbar_img" src="../Assets/Aimclab-Logo.GIF">
             <div id="navbar_name">AimClab</div>
-            <a href="./home.html">Home</a>
             <a href="./leaderboard.html">Leaderboard</a>
             <a href="./store.html">Store</a>
             <a href="./aboutus.html">About Us</a>
+            <a href="./home.html">Home</a>
         </div>
     </header>
+
+    <div class="banner">
+        <div class="image-banner">
+            <img src="">
+        </div>
+    </div>
+
     <main>
-        <h1>Welcome</h1>
-        <section class="sectionexplore">
-            <h2>STRENGTHEN YOUR GAMING SKILLS</h2>
-            <h3>As gamers, we understand that there are numerous games available, each of which is unique. As a result, 
-                Aimclabs provides an extensive variety of resources to help you elevate your aim whatever of the FPS you play. 
+        <section class="menu-content">
+            <div class="menu-section-odd">
+                <div class="menu-subsection">Strengthen your gaming skills.</div>
+                <p>Aimclabs provides an extensive variety of resources to help you elevate your aim whatever of the FPS you play. 
                 This involves both official Aimclabs assignments and collections created by us and those created by our expanding community. 
                 Dive into specifically developed aim training exercises to master the art of flicking, tracking, speed, perception, and cognition 
-                while ranking up in your favorite game.</h3>
-            <h3>TELL ME MORE</h3>
-            <h2>SHOP OUR STORE</h2>
-            <h3>Complete your gaming gear to have interesting game experience.
+                while ranking up in your favorite game.</p>
+                <a href="./aboutus.html">Tell me more</a>
+            </div>
+            <div class="menu-section-even">
+                <div class="menu-subsection">Shop our store.</div>
+                <p>Complete your gaming gear to have interesting game experience.
                 Various design of branded clothing to wear that show you are a game fanatic!</h3>
-            <h3>EXPLORE AIMCLAB STORE</h3>
-            <h2>LEADERBOARD</h2>
-            <h3>See our players' training grand total scores in AimClab.
-                Spot your favorite player here or yourself. *wink*</h3>
-            <h3>SHOW LEADERBOARD</h3>
-            <h3>Are you interested to be the best player in your favorite game?
-                Sign up with us now</h3>
-            <h3>SIGN UP</h3>
-            <h2>Our Social Media</h2>
-            <h3>Instagram @AimClab</h3>
-            <h3>X @AimClab</h3>
-            <h3>Tiktok @AimClab</h3>
+                <a class="link-to" href="./store.html">Explore AimClab store</a>
+            </div>
+            <div class="menu-section-odd">
+                <div class="menu-subsection">Our player is here.</div>
+                <p>See our players' training grand total scores in AimClab.
+                Spot your favorite player here or yourself. *wink*</p>
+                <a class="link-to" href="./leaderboard.html">Show leaderboard</a>
+            </div>
+            <div class="menu-section-even">
+                <p>Are you interested to be the best player in your favorite game?
+                    Join with us now!</p>
+                <a class="link-to" href="./signup.html">Sign up here</a>
+            </div>
         </div>
-        <div class="sectiondownload"></div>
-        <div class="sectionsocialmedia"></div>
+        <div class="download-section"></div>
     </main>
+
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-content">
+            <div class="email">
+                <p>info@aimclab.com</p>
+            </div>
+            <div class="social-media">
+                <a href="https://www.instagram.com">
+                    <img src="../Assets/instagram-logo.png" alt="Instagram">
+                </a>
+                <a href="https://www.x.com">
+                    <img src="../Assets/x-logo.png" alt="X">
+                </a>
+                <a href="https://www.tiktok.com">
+                    <img src="../Assets/tiktok-logo.png" alt="Tiktok">
+                </a>
+            </div>
+        </div>
+        <p class="copyright">&copy; AimClab 2023. All rights reserved.</p>
+    </div>
+</footer>
+
 </body>
 </html>
