--- a/Pages/store.html
+++ b/Pages/store.html
@@ -3,22 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/style.css">
-    <title>Home Page</title>
+    <link rel="stylesheet" href="../Styles/store.css">
+    <title>AiMClab Store</title>
 </head>
 <body>
     <header>
         <div class="navbar"></nav>
         <img id="navbar_img" src="../Assets/AimClab logo.PNG">
         <div id="navbar_name">AimClab</div>
-        <a href="./home.html">Home</a></li>
-        <a href="./leaderboard.html">Leaderboard</a></li>
-        <a href="./store.html">Store</a></li>
-        <a href="./aboutus.html">About Us</a></li>
+        <a href="./leaderboard.html">Leaderboard</a>
+        <a href="./store.html">Store</a>
+        <a href="./aboutus.html">About Us</a>
+        <a href="./home.html">Home</a>
         </div>
     </header>
-    <main>
 
+    <main>
+        <div class="container">
+            <h1>AiMClab Store</h1>
+            <section class="product-card">
+                <div class="product-image">
+                    <img src="path/to/product1.jpg" alt="Product 1">
+                </div>
+                <div class="product-details">
+                    <h2>Product 1 Name</h2>
+                    <p class="price">$X.XX</p>
+                </div>
+            </section>
+            <section class="product-card">
+                <div class="product-image">
+                    <img src="path/to/product2.jpg" alt="Product 2">
+                </div>
+                <div class="product-details">
+                    <h2>Product 2 Name</h2>
+                    <p class="price">$X.XX</p>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 </html>
