--- a/Pages/leaderboard.html
+++ b/Pages/leaderboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/leaderboard.css">
     <title>Home Page</title>
 </head>
 <body>
@@ -11,14 +11,95 @@
         <div class="navbar"></nav>
         <img id="navbar_img" src="../Assets/AimClab logo.PNG">
         <div id="navbar_name">AimClab</div>
-        <a href="./home.html">Home</a></li>
-        <a href="./leaderboard.html">Leaderboard</a></li>
-        <a href="./store.html">Store</a></li>
-        <a href="./aboutus.html">About Us</a></li>
+        <a href="./leaderboard.html">Leaderboard</a>
+        <a href="./store.html">Store</a>
+        <a href="./aboutus.html">About Us</a>
+        <a href="./home.html">Home</a>
         </div>
     </header>
     <main>
-
+        <div id="leaderboard-title">
+            <h1>Leaderboard</h1>
+        </div>
+        <div class="table-card">
+            <div class="table-header">
+                <div class="rank">Rank</div>
+                <div class="username">Username</div>
+                <div class="kill">Kills</div>
+                <div class="accuracy">Accuracy Rate</div>
+                <div class="score">Scores</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">1</div>
+                <div class="username">ampunpuh</div>
+                <div class="kill">2.457</div>
+                <div class="accuracy">98%</div>
+                <div class="score">1.235.678</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">2</div>
+                <div class="username">mamangresing</div>
+                <div class="kill">2.244</div>
+                <div class="accuracy">97%</div>
+                <div class="score">1.127.456</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">3</div>
+                <div class="username">orangketiga</div>
+                <div class="kill">2.333</div>
+                <div class="accuracy">95%</div>
+                <div class="score">1.034.346</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">4</div>
+                <div class="username">kucingbengong</div>
+                <div class="kill">2.218</div>
+                <div class="accuracy">95%</div>
+                <div class="score">1.000.435</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">5</div>
+                <div class="username">dikejarbawah</div>
+                <div class="kill">2.195</div>
+                <div class="accuracy">90%</div>
+                <div class="score">998.345</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">6</div>
+                <div class="username">ngejaratas</div>
+                <div class="kill">2.054</div>
+                <div class="accuracy">91%</div>
+                <div class="score">996.325</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">7</div>
+                <div class="username">ilovekasur</div>
+                <div class="kill">1.567</div>
+                <div class="accuracy">85%</div>
+                <div class="score">823.678</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">8</div>
+                <div class="username">takut</div>
+                <div class="kill">1.396</div>
+                <div class="accuracy">83%</div>
+                <div class="score">798.456</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">9</div>
+                <div class="username">tugasbnykbgtyaallah</div>
+                <div class="kill">1.000</div>
+                <div class="accuracy">80%</div>
+                <div class="score">635.678</div>
+            </div>
+            <div class="player_row">
+                <div class="rank">10</div>
+                <div class="username">gapapasumpah</div>
+                <div class="kill">999</div>
+                <div class="accuracy">79,99%</div>
+                <div class="score">634.999</div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
